--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
     "@mui/material": "^7.0.2",
     "@next/font": "^14.2.15",
     "@radix-ui/react-icons": "^1.3.2",
+    "axios": "^1.9.0",
     "classnames": "^2.5.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.501.0",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.4",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
