--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "bun --bun run next dev --turbopack",
+    "dev": "NEXT_TELEMETRY_DISABLED=1 NODE_OPTIONS='--max-old-space-size=4096 --max-semi-space-size=256' bun --bun run next dev --turbopack ",
+    "dev:fast": "NEXT_TELEMETRY_DISABLED=1 NODE_OPTIONS='--max-old-space-size=6144 --max-semi-space-size=512' bun --bun run next dev --turbopack --experimental-https",
+    "dev:clean": "bun run clean && bun run dev",
+    "dev:profile": "NODE_OPTIONS='--max-old-space-size=4096' bun --bun run next dev --turbopack --port 3000 --experimental-debug-memory-usage",
     "build": "bun --bun run next build",
+    "build:analyze": "ANALYZE=true bun --bun run next build",
     "start": "bun --bun run next start",
-    "lint": "bun --bun run next lint"
+    "lint": "bun --bun run next lint",
+    "clean": "rimraf .next && rimraf node_modules/.cache && rimraf .next/cache && rimraf .turbo"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -30,11 +35,14 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@reduxjs/toolkit": "^2.8.2",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.80.6",
+    "@tanstack/react-query-devtools": "^5.80.6",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.501.0",
@@ -46,6 +54,7 @@
     "react-hook-form": "^7.56.3",
     "react-redux": "^9.2.0",
     "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.4",
@@ -62,6 +71,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "postcss": "^8.5.3",
+    "rimraf": "^6.0.1",
     "shadcn-ui": "^0.9.5",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.9",
