--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.6",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.2",
@@ -39,6 +41,7 @@
     "@tanstack/react-query-devtools": "^5.80.6",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -49,6 +52,7 @@
     "next": "^15.3.0",
     "primereact": "^10.9.5",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.3",
