--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     ports:
       - "${FRONTEND_PORT:-3000}:3000"
     environment:
-      # API Configuration - Connect to external backend
-      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:5000/api}
+      # Client-side API URL - browser sẽ gọi qua localhost:5000
+      - NEXT_PUBLIC_API_URL_BROWSER=http://localhost:5000/api
       - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL:-http://localhost:3000}
 
       # Application Environment
@@ -21,8 +21,7 @@ services:
       # Uploads directory (if needed for file sharing with backend)
       - uploads_data:/app/uploads
     networks:
-      - frontend-network
-      - backend-network # Connect to backend's external network
+      - shared-network # Connect to backend's network
     restart: unless-stopped
     healthcheck:
       test:
@@ -43,14 +42,9 @@ services:
       start_period: 40s
 
 networks:
-  # Internal network for frontend
-  frontend-network:
-    driver: bridge
-
-  # External network to connect with backend
-  backend-network:
+  # Use the same network as backend
+  shared-network:
     external: true
-    name: shared-network
 
 volumes:
   uploads_data:
